# lotkavolterra_simulator

./: .gitignore  README.md  pyproject.toml  setup.py  simulations.ipynb  simulator.py
lotkavolterra_simulator/: __init__.py  simulator.py
src/lotkavolterra_simulator/: simulator.py
